# vecxy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
_legacy/engine/: package.json
_legacy/game/: package-lock.json  rollup.config.js
_legacy/htmlui/: package-lock.json  package.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
assets/shaders/: fragment_shader.glsl  vertex_shader.glsl
clib/: CMakeLists.txt
clib/include/: CMakeLists.txt  string.h
clib/source/: CMakeLists.txt  string.c
docs/: create-project.md  git.md
editor/: .gitignore  Vecxy.Editor.sln  index.html  index.js  package-lock.json  package.json  styles.css
editor/Editor.Core/: Editor.Core.csproj  Program.cs
engine/: Vecxy.Engine.sln  package-lock.json  package.json  rollup.config.js  tsconfig.json
engine-legacy/: index.html  tsconfig.json
engine-legacy/source/: index.ts
engine/Engine.Core/: Engine.Core.csproj  Engine.cs  EngineManifest.cs
engine/Graphics/: Color.cs
engine/Math/: Vector2.cs
engine/UI/: UI.csproj  UIElement.cs
engine/source/: index.js  index.ts
engine/src/: engine.ts  game.interface.ts  index.ts  vecxy.ts
game/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
game/scripts/: build.sh  server.js
game/src/: bird.ts  game.ts  ground.ts  index.ts  pipe.ts  pool.object.ts
game/template/: index.html
game/templates/: index.html
htmlui/: rollup.config.js
htmlui/src/: decorators.ts  delegate.ts  htmlui.ts  property.meta.ts
modules/: Modules.sln
modules/Engine.Modules/: Engine.Modules.csproj  EngineModuleInfo.cs
modules/GG/: GG_CLASS.cs
modules/Test/: Test.csproj  TestModule.cs
native/: Vecxy.sln
native/Core/: Engine.cs
scripting/: CMakeLists.txt  main.c
scripting/core/: lexer.c  lexer.h  token.c  token.h
scripting/include/: CMakeLists.txt
scripting/resources/: Main.ms  Modules.ms
scripting/scripts/: main.ms  mscfg.json  root.msbx  test.ms
scripting/source/: CMakeLists.txt  main.c
scripting/source/common/: file.c  list.c
scripting/source/core/: ast.c  environment.c  fn.c  interpreter.c  lexer.c  module.c  pack.c  parser.c  parser_utils.c  runtime.c  scope.c  token.c  var.c
scripting/source/core/entities/: fn.c  pack.c  scope.c  var.c
scripting/source/modules/: console.c  math.c  modules_manager.c
scripting/src/: CMakeLists.txt  main.c
scripting/src/core/: ast.h  box.c  box.h  interpreter.c  interpreter.h  lexer.c  lexer.h  module.c  module.h  parser.c  parser.h  script.c  script.h  token.h
scripting/src2/: CMakeLists.txt  file.c  lexer.c  lexer.h  list.c  main.c  module.c  pack.c  parser.h  scope.c  str_utils.h  token.c  (+2 more)
source/: index.ts
styles/: index.css
ui/: CMakeLists.txt
web/: package-lock.json  tsconfig.json
(+185 files in other folders)
